# xarm6_control_ros2

./: CMakeLists.txt  README.md  package.xml
rviz/: fk_check.rviz
scripts/: gripper_emulator.py  simple_planner.py  simple_pos_control.py  simple_trajectory.py
src/: simple_planner_with_gripper.cpp  task_space_traj.cpp  task_space_traj_gripper.cpp  task_space_traj_p1.cpp  xarm6_controller.cpp
